# ai

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Containerfile.test  Makefile  README.md  SEMANTIC-ROUTER-PLAN.md  clippy.toml  deny.toml
.claude/: CLAUDE.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci-status.yaml  ci.yaml  codeql.yaml  container.yaml  coverage.yaml  documentation.yaml  integration.yaml  msrv.yaml  nightly.yaml  openai-conformance.yaml  praxis-compat.yaml  publish.yaml  pull-request-hygiene.yaml  release.yaml  supply-chain.yaml  tests.yaml  unicode-safety.yaml  vllm-integration.yaml
apis/: Cargo.toml
apis/src/: lib.rs
apis/src/anthropic/messages_format/: config.rs
apis/src/anthropic/stream_events/: mod.rs
apis/src/anthropic/to_openai/: mod.rs  request.rs  response.rs
apis/src/classifier/: mod.rs
apis/src/mcp_client/: mod.rs  tests.rs
apis/src/openai/: mod.rs  operation.rs  url_security.rs
apis/src/openai/api_client/: error.rs  mod.rs  url.rs
apis/src/openai/conversations/: contracts.rs  filter.rs  handlers.rs  mod.rs  openapi.rs  routes.rs  tests.rs
apis/src/openai/responses/: config.rs  config_validation.rs  mod.rs  state.rs  tests.rs  web_search.rs
apis/src/openai/responses/compact/: config.rs  mod.rs  tests.rs
apis/src/openai/responses/doc_extract/: config.rs  extract.rs  mod.rs  tests.rs
apis/src/openai/responses/file_resolve/: config.rs  mod.rs  resolve.rs  resolve_url.rs  tests.rs
apis/src/openai/responses/file_search_callout/: citations.rs  client.rs  config.rs  live_tests.rs  mod.rs  tests.rs
apis/src/openai/responses/mcp_dispatch/: approval.rs  config.rs  mod.rs  tests.rs
apis/src/openai/responses/mcp_tool_resolve/: config.rs  mod.rs  tests.rs
apis/src/openai/responses/openai_mcp_tool_resolve/: config.rs  mod.rs  tests.rs
apis/src/openai/responses/openai_responses_proxy/: config.rs  mod.rs  tests.rs
apis/src/openai/responses/openai_tool_parse/: config.rs  mod.rs  parser.rs  tests.rs
apis/src/openai/responses/proxy/: mod.rs  tests.rs
apis/src/openai/responses/rehydrate/: mod.rs  tests.rs
apis/src/openai/responses/store/: config.rs  filter.rs  input_items.rs  tests.rs
apis/src/openai/responses/stream_events/: accumulator.rs  config.rs  mod.rs  tests.rs
apis/src/openai/responses/tool_parse/: mod.rs  parser.rs  tests.rs
apis/src/openai/responses/validate/: mod.rs
apis/src/openai/responses/web_search/: config.rs  mod.rs  provider.rs  tests.rs
apis/src/openai/sse/: frame.rs  mod.rs
apis/src/openai/sse/responses/: event.rs  mod.rs
apis/src/openai/translation/: mod.rs
apis/src/store/: postgres.rs  schemas.rs  sqlite.rs  tests.rs  trait_def.rs
apis/src/token_usage/: mod.rs  providers.rs  streaming.rs  tests.rs
benchmarks/microbenchmarks/: common.rs
core/src/: lib.rs  time.rs
docs/: README.md  anthropic-messages-replay-test-plan.md  anthropic-messages.md  features.md  openai-responses.md  overview.md  plugins.md  proposals.md  quickstart.md  release.md  token-counting.md
docs/architecture/: agentic-protocols.md  ai-inference.md  crate-layout.md  response-store.md
docs/conformance/: README.md  openai-conformance-report.json  openai-conversations-implementation-openapi.yaml
docs/developing/: adding-filters.md  adding-protocols.md  conventions.md  getting-started.md  llmd-integration-testing.md  project-management.md
docs/filters/: README.md  a2a.md  ai_guardrails.md  extensions.md  grid_credential_inject.md  grid_route.md  http_callout.md  mcp.md  mcp_tool_resolve.md  reference.md  (+18 more)
examples/: README.md
filters/: Cargo.toml
integrations/llmd/ext-proc/: Cargo.toml
integrations/llmd/ext-proc/src/: callout.rs  duplex.rs  lib.rs  mutations.rs  proto.rs  tests.rs
server/: Cargo.toml
tests/environment/: Cargo.toml
tests/environment/tests/suite/: main.rs  sim_backend.rs
xtask/: Cargo.toml
(+238 files in other folders)
