[package]
name = "praxis-ai-llmd-ext-proc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "llm-d ext_proc compatibility layer for Praxis AI"
license = "MIT AND Apache-2.0 AND BSD-3-Clause"
repository.workspace = true
publish = false

[lib]
name = "praxis_ai_llmd_ext_proc"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
praxis-filter = { workspace = true }
prost-types = { workspace = true }
prost = { workspace = true }
prost-wkt-types = { workspace = true }
tonic-prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sync_wrapper = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["prost", "prost-types", "prost-wkt-types", "tonic-prost"]

[build-dependencies]
prost-build = { workspace = true }
protox = { workspace = true }
tonic-prost-build = { workspace = true }

[dev-dependencies]
praxis-core = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
